# sudoku-solver

./: .env  .env-example  .gitignore  README.md  bot.py  extractor.py  main.py  pyproject.toml  recognition.py  scrapper.py  settings.py  solver.py  training.py
